# chip8

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
.cache/clangd/index/: chip8.cpp.63291FB9F32C8F2D.idx  cpu.hpp.6E4C99CBBA9B0FC9.idx
include/: cpu.h  cpu.hpp  gpu.hpp
roms/: test_opcode.ch8
src/: chip8.cpp  cpu.c  cpu.cpp  gpu.cpp  keyboard.cpp  main.cpp
